--- a/src/components/mainContainer/mainColumn/cardsItem/CardsItem.module.css
+++ b/src/components/mainContainer/mainColumn/cardsItem/CardsItem.module.css
@@ -23,7 +23,9 @@
 	}
 }
 
-
+.card {
+	padding: 2em;
+  }
 
 .card {
 
@@ -100,4 +102,67 @@
 	}
 
 }
+
+.cardGroup {
+	width: 100%;
+	height: 20px;
+	margin-bottom: 12px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+  }
+  .orange {
+	background-color: #FFE4C2;
+	color: #FF6D00;
+  }
+  .cardBtn {
+	width: 24px;
+	height: 24px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	padding: 2px;
+  }
+  .cardBtn div {
+	width: 4px;
+	height: 4px;
+	border-radius: 50%;
+	background-color: #94A6BE;
+  }
+  .cardTitle {
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 18px;
+	color: #000000;
+	margin-bottom: 10px;
+  }
+  .cardContent {
+	height: 64px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-between;
+  }
+  .cardDate {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+  }
+  .cardDate svg {
+	width: 13px;
+  }
+  .cardDate p {
+	margin-left: 6px;
+	font-size: 10px;
+	line-height: 13px;
+	color: #94A6BE;
+	letter-spacing: 0.2px;
+  }
+  .cards__item {
+	padding: 5px;
+	animation-name: card-animation;
+	animation-duration: 500ms;
+	animation-timing-function: linear;
+  }
+
 
