--- a/src/components/header/headerNav/HeaderNav.module.css
+++ b/src/components/header/headerNav/HeaderNav.module.css
@@ -1,17 +1,28 @@
 .headerBtnMainNew {
-    z-index: 3;
-    position: fixed;
-    left: 16px;
-    bottom: 30px;
-    top: auto;
-    width: calc(100vw - 32px);
-    height: 40px;
-    border-radius: 4px;
-    margin-right: 0;
-  }
+  width: 178px;
+  height: 30px;
+  border-radius: 4px;
+  background-color: #565eef;
+  color: #ffffff;
+  border: none;
+  font-size: 14px;
+  line-height: 1;
+  font-weight: 500;
+  margin-right: 20px;
+}
 
+.headerBtnMainNew a {
+  color: white;
+}
   .hover01:hover {
     background-color: #33399b;
+  }
+  .headerNav {
+    max-width: 290px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   
