--- a/src/components/header/user/User.module.css
+++ b/src/components/header/user/User.module.css
@@ -80,9 +80,8 @@
     background-color: transparent;
     width: 72px;
     height: 30px;
-    border: 1px;
-    color: 
-    #565EEF;
+    border: 1px solid #565EEF;
+    color: #565EEF;
     border-radius: 4px;
   }
 
