--- a/src/components/auth/login/Login.module.css
+++ b/src/components/auth/login/Login.module.css
@@ -36,16 +36,22 @@
     flex-direction: column;
     /* width: 248px; */
     row-gap: 20px;
-    align-items: center;}
+    align-items: center;
+}
 .loginBoxInput {
     display: flex;
     flex-direction: column;
     row-gap: 7px;
     width: 100%;
+}
+.loginInput {
+    width: 100%;
     height: 30px;
     border-radius: 8px;
-    border: 0,7px solid #94A6BE
-    40%;
+    border: 0.7px solid #94A6BE 40%;
+    background-color: white !important;
+    padding: 
+    8px, 10px, 8px, 10px;
 }
 .loginButton {
 width: 100%;
@@ -53,4 +59,9 @@ height: 30px;
 border-radius: 4px;
 background-color: 
 #565EEF;
+}
+.loginLink {
+    color: 
+    #94A6BE
+    40%;
 }
