--- a/src/components/popExit/PopExit.module.css
+++ b/src/components/popExit/PopExit.module.css
@@ -1,5 +1,5 @@
 .popExit {
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
     min-width: 320px;
@@ -65,7 +65,7 @@
   .popExitExitYes a {
     width: 100%;
     height: 100%;
-    color: #FFFFFF;
+    color: #565EEF;
     display: flex;
     align-items: center;
     justify-content: center;
