--- a/src/components/popExit/PopExit.module.css
+++ b/src/components/popExit/PopExit.module.css
@@ -65,7 +65,7 @@
   .popExitExitYes a {
     width: 100%;
     height: 100%;
-    color: #565EEF;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
