--- a/src/components/auth/register/Register.module.css
+++ b/src/components/auth/register/Register.module.css
@@ -7,7 +7,7 @@
  top: 50%;
  left: 50%;
  border-radius :10px;
- border: 1px solid #565EEF;
+ /* border: 1px solid #565EEF; */
  padding-top: 50px;
  padding-left: 60px;
  padding-bottom: 50px;
@@ -17,6 +17,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0px 4px 67px -12px #00000021;
+
 }
 
 /* .loginBlock {
@@ -31,11 +33,14 @@
 .inter {
     font-size: 10px;
 }
+.registrTitle {
+font-size: 20px;
+}
 .loginForm {
+    width: 248px;
     display: flex;
     flex-direction: column;
-    /* width: 248px; */
-    row-gap: 20px;
+    row-gap: 10px;
     align-items: center;
 }
 .loginBoxInput {
@@ -48,7 +53,7 @@
     width: 100%;
     height: 30px;
     border-radius: 8px;
-    border: 0.7px solid #94A6BE 40%;
+    border: 0.7px solid #94A6BE;
     background-color: white !important;
     color: black;
     padding: 
@@ -64,9 +69,17 @@ font-size: 14px;
 }
 .loginLink {
     color: 
-    #94A6BE
-    40%;
+    #94A6BE;
 }
 .linkRegistr {
-   
+   display: flex;
+   flex-direction: column;
+   color: 
+   #94A6BE;
+}
+.registrError{
+    color: red;
+}
+.underLine {
+    text-decoration: underline;
 }
