--- a/src/components/buttons/Buttons.module.css
+++ b/src/components/buttons/Buttons.module.css
@@ -74,3 +74,17 @@
   .btnBg a {
     color: #FFFFFF;
   }
+  .formNewCreate {
+    width: 132px;
+    height: 30px;
+    background-color: #565EEF;
+    border-radius: 4px;
+    border: 0;
+    outline: none;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1;
+    color: #FFFFFF;
+    float: right;
+  }
+  
