--- a/src/components/popNewCard/PopNewCard.module.css
+++ b/src/components/popNewCard/PopNewCard.module.css
@@ -205,6 +205,19 @@
   font-weight: 600;
   line-height: 1;
 }
+.formNewCreate {
+  width: 132px;
+  height: 30px;
+  background-color: #565EEF;
+  border-radius: 4px;
+  border: 0;
+  outline: none;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  color: #FFFFFF;
+  float: right;
+}
 
   
   
