--- a/src/components/cardsItem/CardsItem.module.css
+++ b/src/components/cardsItem/CardsItem.module.css
@@ -160,3 +160,20 @@
 	color: #94A6BE;
 	letter-spacing: 0.2px;
 }
+.categoriesTheme {
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 30px;
+    padding: 8px 20px;
+    border-radius: 24px;
+    margin-right: 7px;
+    opacity: 0.4;
+  }
+  .orange {
+    background-color: #FFE4C2;
+    color: #FF6D00;
+  }
+  .activeCategory {
+    opacity: 1 !important;
+  }
