--- a/src/components/popBrowse/browseEdit/BrowseEdit.module.css
+++ b/src/components/popBrowse/browseEdit/BrowseEdit.module.css
@@ -207,7 +207,7 @@ outline: none;
   line-height: 24px;
 }
 .categoriesTheme {
-  display: inline-block;
+  display: flex;
   width: auto;
   height: 30px;
   padding: 8px 20px;
