--- a/src/components/popBrowse/themeCategories/ThemeCategories.module.css
+++ b/src/components/popBrowse/themeCategories/ThemeCategories.module.css
@@ -89,4 +89,22 @@
   cursor: pointer;
   outline: none;
 }    
-    
+.orange {
+	background-color: #FFE4C2;
+	color: #FF6D00;
+  }
+  
+  .green {
+	background-color: #B4FDD1;
+	color: #06B16E;
+  }
+  
+  .purple {
+	background-color: #E9D4FF;
+	color: #9A48F1;
+  }
+  
+  .gray {
+	background: #94A6BE;
+	color: #FFFFFF;
+  }    
