--- a/src/components/auth/login/Login.module.css
+++ b/src/components/auth/login/Login.module.css
@@ -1,35 +1,23 @@
 .login {
     position: fixed;
-  display: flex;
- width :368px;
- height :329px;
- transform: translate(-50%, -50%);
- top: 50%;
- left: 50%;
- border-radius :10px;
- /* border: 1px solid #565EEF; */
- padding-top: 50px;
- padding-left: 60px;
- padding-bottom: 50px;
- padding-right: 60px;
- gap :10px;
-  background-color: white;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0px 4px 67px -12px #00000021;
-
-}
-
-/* .loginBlock {
-    position: fixed;
     display: flex;
+    width :368px;
+    height :329px;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius :10px;
+    padding-top: 40px;
+    padding-left: 60px;
+    padding-bottom: 50px;
+    padding-right: 60px;
+    gap :10px;
+    background-color: white;
     flex-direction: column;
-    width: 248px;
-    row-gap: 20px;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px;
-} */
+    box-shadow: 0px 4px 67px -12px #00000021;
+}
 .inter {
     font-size: 10px;
 }
@@ -39,7 +27,7 @@
 .loginForm {
     display: flex;
     flex-direction: column;
-    width: 248px;
+    width: 270px;
     row-gap: 20px;
     align-items: center;
 }
@@ -60,11 +48,10 @@
     color: black;
 }
 .loginButton {
-width: 100%;
-height: 30px;
-border-radius: 4px;
-background-color: 
-#565EEF;
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+    background-color: #565EEF;
 }
 .loginLink {
     color: 
