--- a/src/components/header/user/User.module.css
+++ b/src/components/header/user/User.module.css
@@ -15,6 +15,10 @@
   padding: 34px;
   text-align: center;
   z-index: 2;
+  display: flex;
+  row-gap: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 .popUserSetName {
   color: #000;
