--- a/src/components/popNewCard/PopNewCard.module.css
+++ b/src/components/popNewCard/PopNewCard.module.css
@@ -2,7 +2,6 @@
     display: block;
     width: 100%;
     min-width: 375px;
-    /* height: 100%; */
     min-height: 100vh;
     position: absolute;
     top: 0;
@@ -70,7 +69,6 @@
     flex-direction: column;
   }
   .formNewInput, .formNewArea {
-    /* width: 100%; */
     outline: none;
     padding: 14px;
     background: #EAEEF6;    
@@ -110,40 +108,30 @@
   .categories {
     margin-bottom: 20px;
   }
-  .categoriesThemes {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
   .categoriesP {
     margin-bottom: 14px;
   }
   .categoriesTheme {
-    display: inline-block;
+    display: inline-table;
     width: auto;
     height: 30px;
     padding: 8px 20px;
     border-radius: 24px;
     margin-right: 7px;
     opacity: 0.4;
+    appearance: none;
   }
-  .categoriesTheme p {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 14px;
-    white-space: nowrap;
+  .inputStatus {
+    appearance: none;
   }
   .orange {
     background-color: #FFE4C2;
     color: #FF6D00;
   }
-  
   .green {
     background-color: #B4FDD1;
     color: #06B16E;
   }
-  
   .purple {
     background-color: #E9D4FF;
     color: #9A48F1;
@@ -218,6 +206,9 @@
   color: #FFFFFF;
   float: right;
 }
-
+.error {
+  color: red;
+  margin-bottom: 20px;
+}
   
   
