--- a/src/components/popBrowse/browseContaner/BrowseContaner.module.css
+++ b/src/components/popBrowse/browseContaner/BrowseContaner.module.css
@@ -86,7 +86,6 @@
   .activeCategory {
     opacity: 1 !important;
   }
-  
   .btnBor {
     border-radius: 4px;
     border: 0.7px solid var(--palette-navy-60, #565EEF);
@@ -119,9 +118,6 @@
     left: 0;
     z-index: 7;
   }
-  
-  
-  
   .statusThemes {
     display: flex;
     flex-wrap: wrap;
@@ -132,26 +128,29 @@
     border-radius: 24px;
     border: 0.7px solid rgba(148, 166, 190, 0.4);
     color: #94A6BE;
-    padding: 11px 14px 10px;
+    padding: 7px 14px 7px;
     margin-right: 7px;
     margin-bottom: 7px;
+    appearance: none;
   }
   .statusThemeP {
     font-size: 14px;
     line-height: 1;
     letter-spacing: -0.14px;
   }
+  .active {
+    background-color: #D4DBE5;
+    color: white;
+  }
   .gray {
     background: #94A6BE;
     color: #FFFFFF;
   }
- 
   button,
 .btn {
   cursor: pointer;
   outline: none;
 }    
-    
   .btnGroup {
     display: flex;
     flex-direction: row;
@@ -222,16 +221,22 @@
   color: #FFFFFF;
   float: right;
 }
-
+.status {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 11px;
+}
 .subttl {
   color: #000;
   font-size: 14px;
   font-weight: 600;
   line-height: 1;
+  margin-bottom: 20px;
 }
 .popBrowseForm .formBrowseArea {
+  width: 370px;
   max-width: 370px;
-  width: 100%;
   text-wrap: balance;
   outline: none;
   padding: 14px;
@@ -259,20 +264,7 @@
 .popBrowseForm {
   margin: 20px 0;
 }
-/* .formBrowseArea {
-  max-width: 370px;
-  margin-top: 14px;
-  height: 200px;
-} */
-/* .formBrowse {
-
-&:area {
-  max-width: 100%;
+.calendar {
+  padding-top: 17px;
 }
-
-&:area {
-  height: 37px;
-}
-} */
-
 
