--- a/src/App.css
+++ b/src/App.css
@@ -548,7 +548,7 @@ body {
   height: 100%;
   min-width: 375px;
   min-height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 7;
