--- a/src/components/popBrowse/browseEdit/BrowseEdit.module.css
+++ b/src/components/popBrowse/browseEdit/BrowseEdit.module.css
@@ -53,8 +53,8 @@
   justify-content: space-between;
 }
 .popBrowseForm .formBrowseArea {
-  width: 400px;
-  max-width: 400px;
+  width: 300px;
+  max-width: 300px;
   text-wrap: balance;
   outline: none;
   padding: 14px;
@@ -65,7 +65,7 @@
   line-height: 1;
   letter-spacing: -0.14px;
   margin-top: 14px;
-  height: 180px;
+  height: 290px;
   color: black;
 
   &::placeholder {
@@ -160,16 +160,17 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-top: 15px;
 }
 .statusTheme {
   border-radius: 24px;
   border: 0.7px solid rgba(148, 166, 190, 0.4);
   color: #94A6BE;
-  padding: 7px 12px 7px;
+  padding: 10px 14px;
   margin-right: 7px;
   margin-bottom: 7px;
+  font-size: 14px;
 }
 .statusThemeP {
   font-size: 14px;
@@ -196,15 +197,6 @@ outline: none;
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
-}
-.categoriesTheme {
-  display: flex;
-  width: auto;
-  height: 30px;
-  padding: 8px 20px;
-  border-radius: 24px;
-  margin-right: 7px;
-  opacity: 0.4;
 }
 .themeTop {
   display: block;
