--- a/src/components/popBrowse/browseEdit/BrowseEdit.module.css
+++ b/src/components/popBrowse/browseEdit/BrowseEdit.module.css
@@ -116,14 +116,18 @@
   margin-right: 7px;
   opacity: 0.4;
 }
+.green {
+  background-color: #B4FDD1;
+  color: #06B16E;
+}
+.purple {
+  background-color: #E9D4FF;
+  color: #9A48F1;
+}
 .orange {
   background-color: #FFE4C2;
   color: #FF6D00;
 }
-.activeCategory {
-  opacity: 1 !important;
-}
-
 .btnBor {
   border-radius: 4px;
   border: 0.7px solid var(--palette-navy-60, #565EEF);
@@ -151,7 +155,7 @@
   height: 100%;
   min-width: 375px;
   min-height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 7;
