--- a/src/components/popExit/PopExit.module.css
+++ b/src/components/popExit/PopExit.module.css
@@ -4,7 +4,7 @@
     height: 100%;
     min-width: 320px;
     min-height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 5;
